# leros2

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json
common/: pyproject.toml
common/lerobot_common_ros2/: config_ros2_common.py
common/lerobot_common_ros2/components/: __init__.py
examples/lerobot_robot_ure/: convert_config.yaml
examples/lerobot_robot_ure/lerobot_robot_ure/: config_ure.py  ure.py
examples/lerobot_teleoperator_pose/lerobot_teleoperator_pose/: config_pose.py  pose.py
examples/leros2_record_utils/: README.md  package.xml  setup.cfg  setup.py
examples/leros2_record_utils/leros2_record_utils/: record_utils.py
examples/ure/: pyproject.toml
examples/ure/lerobot_robot_ure/: config_ure.py  ure.py
robot/: pyproject.toml
robot/lerobot_robot_ros2/: __init__.py
robot/lerobot_robot_ros2/components/: gripper.py  joint_trajectory.py
src/leros2/: common.py  robot.py
src/leros2/components/: compressed_image.py  image.py  joint_action.py  joint_state.py  parallel_gripper_action.py  pose_action.py  pose_state.py  relative_pose_action.py  wrench_state.py
src/leros2/components/common/: __init__.py  action.py  base_image.py  state.py
src/leros2/scripts/: convert.py
teleoperator/: pyproject.toml
teleoperator/lerobot_teleoperator_ros2/: config_ros2_teleoperator.py  ros2_teleoperator.py
teleoperator/lerobot_teleoperator_ros2/components/: joint_state.py  pose_stamped.py
