[project]
name = "lerobot_robot_ros2"
version = "0.1.0"
description = "LeRobot ROS2 robot"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = ["lerobot", "lerobot_common_ros2"]

[tool.uv.sources]
lerobot_common_ros2 = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lerobot_robot_ros2"
module-root = ""